Corrected alignment problem with numbers in about section. Switched colours of circles in about and services section

--- a/css/agency.css
+++ b/css/agency.css
@@ -14,7 +14,7 @@ body {
 }
 
 .text-primary {
-    color: #42d05d;
+    color: #e34bb6;
 }
 
 p {
@@ -493,7 +493,7 @@ section h3.section-subheading {
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #e34bb6;
+    background-color: #42d05d;
     line-height: 66px;
     font-size: 3em;
 }
@@ -595,7 +595,7 @@ section h3.section-subheading {
         height: 150px;
         margin-left: -75px;
         line-height: 136px;
-        font-size: 6em;
+        font-size: 5em;
     }
 
     .timeline>li .timeline-image h4 {
@@ -622,6 +622,8 @@ section h3.section-subheading {
         width: 170px;
         height: 170px;
         margin-left: -85px;
+        line-height: 156px;
+        font-size: 6em;
     }
 
     .timeline>li .timeline-image h4 {
